feat: add pofile editing

--- a/data/public/css/styles.css
+++ b/data/public/css/styles.css
@@ -356,7 +356,7 @@ label {
     font-weight: bold;
     margin-bottom: 5px;
 }
-select, input[type="text"], input[type="email"], input[type="tel"], input[type="date"], input[type="time"],input[type="description"] {
+select, input[type="text"], [type="password"], input[type="email"], input[type="tel"], input[type="date"], input[type="time"],input[type="description"] {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
